<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kfalasiri.mixers.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Mic Effects-->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/mic_coordinator_layout"
        android:layout_width="512dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/line_coordinator_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <!--Reverb Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micReverbBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Reverb"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Chorus Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micChorusBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Chorus"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Bitcrusher Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micCrusherBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Bitcrusher"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Flanger Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micFlangerBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Flanger"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Phaser Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micPhaserBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Phaser"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Delay Mic Bottom Sheet-->
        <LinearLayout
            android:id="@+id/micDelayBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="Mic Delay"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/mic_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/mic_delay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Delay"
                app:layout_constraintRight_toRightOf="@+id/mic_bitcrusher_button"
                app:layout_constraintTop_toTopOf="@+id/mic_chorus_button"
                tools:ignore="HardcodedText"
                app:layout_constraintLeft_toLeftOf="@+id/mic_bitcrusher_button" />

            <Button
                android:id="@+id/mic_flanger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"

                android:text="Flanger"
                app:layout_constraintLeft_toLeftOf="@+id/mic_reverb_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText"
                app:layout_constraintRight_toRightOf="@+id/mic_reverb_button" />

            <Button
                android:id="@+id/mic_bitcrusher_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Crusher"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/mic_phaser_button"
                app:layout_constraintTop_toTopOf="@+id/mic_phaser_button"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/mic_phaser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Phaser"
                app:layout_constraintRight_toLeftOf="@+id/mic_bitcrusher_button"
                app:layout_constraintLeft_toRightOf="@+id/mic_reverb_button"
                app:layout_constraintTop_toTopOf="@+id/mic_reverb_button"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/mic_chorus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="chorus"
                app:layout_constraintTop_toTopOf="@+id/mic_flanger_button"
                tools:ignore="HardcodedText"
                app:layout_constraintRight_toRightOf="@+id/mic_phaser_button"
                app:layout_constraintLeft_toLeftOf="@+id/mic_phaser_button" />

            <Button
                android:id="@+id/mic_reverb_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"

                android:text="reverb"
                app:layout_constraintRight_toLeftOf="@+id/mic_phaser_button"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/mic_flanger_button"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintVertical_bias="0.867"
                tools:ignore="HardcodedText" />
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.CoordinatorLayout>


    <!--Line Effects-->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/line_coordinator_layout"
        android:layout_width="512dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <!--Reverb Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/lineReverbBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Reverb"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Chorus Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/lineChorusBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Chorus"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Bitcrusher Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/lineCrusherBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Bitcrusher"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Flanger Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/lineFlangerBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Flanger"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Phaser Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/linePhaserBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Phaser"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <!--Delay Line Bottom Sheet-->
        <LinearLayout
            android:id="@+id/lineDelayBottom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/holo_green_dark"
            android:clipToPadding="false"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:text="line Delay"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/line_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/line_phaser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phaser"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/line_bitcrusher_button"
                app:layout_constraintVertical_bias="0.358" />

            <Button
                android:id="@+id/line_flanger_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flanger"
                app:layout_constraintHorizontal_bias="0.148"
                app:layout_constraintLeft_toLeftOf="@+id/line_reverb_button"
                app:layout_constraintRight_toRightOf="@+id/line_reverb_button"
                app:layout_constraintTop_toTopOf="@+id/line_chorus_button" />

            <Button
                android:id="@+id/line_chorus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chorus"
                app:layout_constraintLeft_toLeftOf="@+id/line_phaser_button"
                app:layout_constraintRight_toRightOf="@+id/line_phaser_button"
                app:layout_constraintTop_toTopOf="@+id/line_delay_button" />

            <Button
                android:id="@+id/line_delay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/henlo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.851"
                app:layout_constraintLeft_toLeftOf="@+id/line_bitcrusher_button"
                app:layout_constraintRight_toRightOf="@+id/line_bitcrusher_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/line_bitcrusher_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crusher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.851"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.358" />

            <Button
                android:id="@+id/line_reverb_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverb"
                app:layout_constraintHorizontal_bias="0.148"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/line_phaser_button"
                android:layout_marginTop="-7dp" />
        </android.support.constraint.ConstraintLayout>

        <!--Mic Effect 1-->

    </android.support.design.widget.CoordinatorLayout>

    <!--Line Effects-->

    <!--EchoBottom-->

</LinearLayout>